--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "hasura-squasher",
   "version": "1.0.2",
   "description": "squash hasura migrations",
+  "keywords": ["hasura", "migrations"],
   "main": "cli.js",
-  "author": "Domas Lapinskas <domas.lapinskas@sony.com>",
+  "author": "Domas Lapinskas <domasx2@gmail.com>",
   "license": "MIT",
   "private": false,
   "scripts": {
