--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "shelljs": "^0.8.3",
     "sql-formatter": "^2.3.3",
     "yargs": "^13.3.0"
+  },
+  "resolutions": {
+    "lodash": "^4.17.13"
   }
 }
